--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>FinTrackFlow - A Seamless Financial Forecasting, Budgeting & Project Oversight</title>
+    <title>FinTrackPro - A Seamless Financial Forecasting, Budgeting & Project Oversight</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
